[package]
name = "cctalk"
version = "0.2.0"
license = "MIT"
authors = ["Juhasz Sandor <blackghost1987@gmail.com>"]
repository = "https://github.com/endticket/cctalk"
description = "CCTalk protocol implementation for handling payment devices"
edition = "2018"

[dependencies]
serialport = "4"
log = "0.4"
