[package]
name = "cctalk"
version = "0.2.0"
license = "MIT"
authors = ["Juhasz Sandor <blackghost1987@gmail.com>"]
repository = "https://github.com/endticket/cctalk"
description = "CCTalk protocol implementation for handling payment devices"
edition = "2018"

[dependencies]
serialport = {version = "4.0.1", default-features = false}
log = "0.4"

[[example]]
name = "coinacceptor"

[[example]]
name = "cctalk-host"

[dev-dependencies]
env_logger = "0.7"
clap = "3.0"
