[package]
name = "cctalk-client"
version = "0.1.0"
description = "Minimal ccTalk Client"
edition = "2021"
license = "MIT"


[[bin]]
name = "cctalk-client"
path = "main.rs"

[dependencies]
log = "0.4"
env_logger = "0.7"
clap = "2.33.3"
serialport = "4.0.1"

[dependencies.cctalk]
path = ".."
version = "0.1.0"
